--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         var c=canvas.getContext('2d');
         canvas.width=window.innerWidth;
         canvas.height=window.innerHeight;
-        var bg=new BackGround(0);
+        var bg=[];
+        bg[0]=new BackGround(0);
         //GameLoop
         //update...draw...loop again
         function update(elapsed){
-            bg.x-=2;
+            bg[0].x-=2;
         }
         function draw(ctx){
-            bg.draw(ctx);
+            ctx.clearRect(0,0, ctx.canvas.width, ctx.canvas.height);
+            bg[0].draw(ctx);
         }
         var then=Date.now();
         var now=0;
